feat: Add Layout html for ask the user for his data

--- a/index.html
+++ b/index.html
@@ -11,6 +11,41 @@
 </head>
 
 <body>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <form action="">
+          <div class="row">
+            <div class="col-12 col-md-4">
+              <h2>Nome del Passeggero</h2>
+              <label for="" class="form-label">Nome e Cognome</label>
+              <input type="text" name="Nominativo" id="Nominativo" class="form-control"
+                placeholder="Inserisci Nome e Cognome">
+            </div>
+            <div class="col-12 col-md-4">
+              <h2>Distanza da Percorrere</h2>
+              <label for="" class="form-label">KM</label>
+              <input type="number" name="km" id="km" class="form-control" placeholder="Km da percorrere">
+            </div>
+            <div class="col-12 col-md-4">
+              <h2>Età del Passeggero</h2>
+              <label for="" class="form-label">Età</label>
+              <input type="number" name="age" id="age" class="form-control" placeholder="Quanti anni hai?">
+            </div>
+            <div class="col-12">
+              <button type="submit" class="btn btn-warning">Conferma</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
   <script src="js/script.js"></script>
 </body>
 
