--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
               <input type="number" name="age" id="age" class="form-control" placeholder="Quanti anni hai?">
             </div>
             <div class="col-12">
-              <button type="submit" class="btn btn-warning">Conferma</button>
+              <button type="submit" class="btn btn-warning" id="check">Conferma</button>
             </div>
           </div>
         </form>
+      </div>
+      <div class="col-12">
+        <div id="result"></div>
       </div>
     </div>
   </div>
