feat: show the result in the html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="col-12 col-md-4">
               <h2>Nome del Passeggero</h2>
               <label for="" class="form-label">Nome e Cognome</label>
-              <input type="text" name="Nominativo" id="Nominativo" class="form-control"
+              <input type="text" name="nominativo" id="nominativo" class="form-control"
                 placeholder="Inserisci Nome e Cognome">
             </div>
             <div class="col-12 col-md-4">
@@ -43,12 +43,6 @@
       </div>
     </div>
   </div>
-
-
-
-
-
-
   <script src="js/script.js"></script>
 </body>
 
