--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             </div>
             <div class="col-12">
               <button type="submit" class="btn btn-warning" id="check">Conferma</button>
+              <button type="submit" class="btn btn-secondary" id="reset">Annulla</button>
             </div>
           </div>
         </form>
