fix: edit layout ticket

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           </div>
         </form>
       </div>
+
       <div class="col-12">
         <div class="card">
           <div class="card-header text-center">
@@ -52,22 +53,37 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Dettaglio del biglietto</h5>
-            <div class="col-12 col-md-4">
-              <div id="result"></div>
-            </div>
-            <div class="col-12 col-md-8">
-              <div class="d-column justify-content-around">
-                <h5>Offerta</h5>
+            <div class="row">
+              <div class="col-12 col-md-4">
+                <div id="result">
+                  <h5>Passeggero</h5>
+                  <span id="shoename"></span>
+                  <span id="showage"></span>
+                  <span id="showdistance"></span>
+                </div>
               </div>
-              <div class="d-column justify-content-around">
-                <h5>Vagone</h5>
+              <div class="col-12 col-md-8">
+                <div class="d-flex justify-content-around">
+                  <div>
+                    <h5>Offerta</h5>
+                    <span id="offer"></span>
+                  </div>
+                  <div>
+                    <h5>Vagone</h5>
+                    <span id="wagonnumber"></span>
+                  </div>
+                  <div>
+                    <h5>Codice Bigilietto</h5>
+                    <span id="codrandom"></span>
+                  </div>
+                  <div>
+                    <h5>Costo del Biglietto</h5>
+                    <span id="finalpricerun"></span>
+                  </div>
+                </div>
               </div>
-              <div class="d-column justify-content-around">
-                <h5>Codice Bigilietto</h5>
-              </div>
-              <div class="d-column justify-content-around">
-                <h5>Costo del Biglietto</h5>
-              </div>
+
+
             </div>
           </div>
         </div>
