--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 my-5">
         <form action="">
-          <div class="row bg-primary">
+          <div class="row bg-trasparent">
             <div class="col-12 col-md-4">
 
               <label for="" class="form-label">Nome e Cognome</label>
@@ -48,37 +48,37 @@
 
       <div class="col-12">
         <div class="card">
-          <div class="card-header text-center">
+          <div class="card-header text-center bg-warning">
             Il Tuo Biglietto
           </div>
-          <div class="card-body">
+          <div class="card-body bg-info bg-gradient">
             <h5 class="card-title">Dettaglio del biglietto</h5>
             <div class="row">
               <div class="col-12 col-md-4">
                 <div id="result">
-                  <h5>Passeggero</h5>
-                  <span id="shoename"></span>
-                  <span id="showage"></span>
-                  <span id="showdistance"></span>
+                  <h5>Dettagli Passeggero</h5>
+                  <div id="showname"> - </div>
+                  <div id="showage"> - </div>
+                  <div id="showdistance"> - </div>
                 </div>
               </div>
               <div class="col-12 col-md-8">
-                <div class="d-flex justify-content-around">
-                  <div>
+                <div class="d-flex justify-content-around h-100">
+                  <div class="d-flex flex-column justify-content-between h-100">
                     <h5>Offerta</h5>
-                    <span id="offer"></span>
+                    <div id="offer"> - </div>
                   </div>
-                  <div>
+                  <div class="d-flex flex-column justify-content-between h-100">
                     <h5>Vagone</h5>
-                    <span id="wagonnumber"></span>
+                    <div id="wagonnumber"> - </div>
                   </div>
-                  <div>
+                  <div class="d-flex flex-column justify-content-between h-100">
                     <h5>Codice Bigilietto</h5>
-                    <span id="codrandom"></span>
+                    <div id="codrandom"> - </div>
                   </div>
-                  <div>
+                  <div class="d-flex flex-column justify-content-between h-100">
                     <h5>Costo del Biglietto</h5>
-                    <span id="finalpricerun"></span>
+                    <div id="finalpricerun"> - </div>
                   </div>
                 </div>
               </div>
